
package MedEps.Modelo.Entidades.Enumeraciones;
/**
 *
 * @author anton
 */
public enum RolUsuarioEnum {
 ADMINISTRADOR,
 PACIENTE,
 DOCTOR
}
